<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="false"
    android:orientation="vertical"
    tools:context=".Signup">

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="50dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/enter_your_name"
        android:inputType="textPersonName"
        android:textColor="@color/colorAccent"
        tools:ignore="autofill" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="50dp"
        android:ems="10"
        android:hint="@string/enter_your_user_id"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        tools:ignore="autofill" />

    <EditText
        android:id="@+id/pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="50dp"
        android:ems="10"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        tools:ignore="autofill" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="50dp"
        android:ems="10"
        android:hint="@string/enter_phone_number"
        android:inputType="phone"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        tools:ignore="autofill" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="100dp"
            android:layout_weight="1"
            android:text="@string/date_of_birth_dd_mm_yyyy"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/today"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:clickable="true"
            android:contentDescription="@string/today"
            android:focusable="true"
            app:srcCompat="@drawable/today" />

    </LinearLayout>

    <Button
        android:id="@+id/btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="110dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="110dp"
        android:background="@drawable/mybutton"
        android:fontFamily="serif-monospace"
        android:text="@string/signup"
        android:textColor="#FF5722"
        android:textSize="16sp"
        android:textStyle="bold" />
</LinearLayout>