<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="20dp"
        android:fontFamily="@font/artifika"
        android:text="@string/e_com_plus"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="26sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginLeft="180dp"
        android:layout_marginRight="20dp"
        android:fontFamily="@font/artifika"
        android:text="@string/welcomes_you"
        android:textColor="#03A9F4"
        android:textSize="16sp" />

    <Button
        android:id="@+id/signup"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="110dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="110dp"
        android:background="@drawable/mybutton"
        android:fontFamily="serif-monospace"
        android:text="@string/signup"
        android:textAlignment="center"
        android:textColor="#FF5722"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/login"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="110dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="110dp"
        android:background="@drawable/mybutton"
        android:fontFamily="serif-monospace"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="#FF5722"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/skip"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="110dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="110dp"
        android:background="@drawable/mybutton"
        android:fontFamily="serif-monospace"
        android:text="@string/skip_for_now"
        android:textAlignment="center"
        android:textColor="#FF5722"
        android:textSize="16sp"
        android:textStyle="bold" />
</LinearLayout>